--- a/requirements.txt
+++ b/requirements.txt
@@ -1,279 +1,249 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: osx-arm64
-abseil-cpp=20210324.2=hbdafb3b_0
-absl-py=1.4.0=pypi_0
-aiohttp=3.9.0=pypi_0
+absl-py=2.1.0=pyhd8ed1ab_0
+aiohttp=3.9.5=py39h17cfd9d_0
 aiosignal=1.3.1=pyhd8ed1ab_0
-appdirs=1.4.4=pypi_0
-appnope=0.1.3=pypi_0
-asttokens=2.2.1=pypi_0
+appnope=0.1.4=pyhd8ed1ab_0
+asttokens=2.4.1=pyhd8ed1ab_0
 astunparse=1.6.3=pyhd8ed1ab_0
 async-timeout=4.0.3=pyhd8ed1ab_0
 attrs=23.2.0=pyh71513ae_0
-backcall=0.2.0=pypi_0
-blinker=1.8.2=pyhd8ed1ab_0
-boltons=24.0.0=pyhd8ed1ab_0
+aws-c-auth=0.7.22=h27bc0eb_5
+aws-c-cal=0.6.15=h5db4892_0
+aws-c-common=0.9.19=h99b78c6_0
+aws-c-compression=0.2.18=h5db4892_6
+aws-c-event-stream=0.4.2=h4de9e5c_13
+aws-c-http=0.8.2=h2c662d3_2
+aws-c-io=0.14.9=h8709d7d_2
+aws-c-mqtt=0.10.4=h5fc5ab5_6
+aws-c-s3=0.5.10=h48f01f6_3
+aws-c-sdkutils=0.1.16=h5db4892_2
+aws-checksums=0.1.18=h5db4892_6
+aws-crt-cpp=0.26.12=h9d69022_0
+aws-sdk-cpp=1.11.329=h6bd5272_5
+beautifulsoup4=4.12.3=pyha770c72_0
 brotli=1.1.0=hb547adb_1
 brotli-bin=1.1.0=hb547adb_1
-brotli-python=1.1.0=py310h1253130_1
-brotlipy=0.7.0=py310h8e9501a_1005
+brotli-python=1.1.0=py39hb198ff7_1
 bzip2=1.0.8=h93a5062_5
 c-ares=1.28.1=h93a5062_0
 ca-certificates=2024.6.2=hf0a4a13_0
 cached-property=1.5.2=hd8ed1ab_1
 cached_property=1.5.2=pyha770c72_1
-cachetools=5.3.0=pypi_0
-catalogue=2.0.10=py310hbe9552e_0
 certifi=2024.6.2=pyhd8ed1ab_0
-cffi=1.16.0=py310hdcd7c05_0
-charset-normalizer=3.3.2=pyhd8ed1ab_0
+charset-normalizer=2.0.12=pypi_0
 click=8.1.7=unix_pyh707e725_0
 colorama=0.4.6=pyhd8ed1ab_0
-comm=0.1.3=pypi_0
-commonmark=0.9.1=py_0
-conda=23.7.4=py310hbe9552e_0
-conda-package-handling=2.3.0=pyh7900ff3_0
-conda-package-streaming=0.10.0=pyhd8ed1ab_0
-confection=0.1.4=py310ha73103e_0
-contourpy=1.2.1=py310h21239e6_0
-cryptography=39.0.0=py310h4fe9c50_0
+comm=0.2.2=pyhd8ed1ab_0
+contourpy=1.2.1=py39h48c5dd5_0
 cycler=0.12.1=pyhd8ed1ab_0
-cymem=2.0.8=py310h1253130_1
-cython-blis=0.7.10=py310h280b8fa_2
 dataclasses=0.8=pyhc8e2a94_3
-debugpy=1.6.7=pypi_0
-decorator=5.1.1=pypi_0
-diskcache=5.6.3=pypi_0
-en-core-web-sm=3.5.0=pypi_0
-entrypoints=0.4=pypi_0
-executing=1.2.0=pypi_0
-filelock=3.15.1=pyhd8ed1ab_0
-flaml=2.1.1=pypi_0
-flatbuffers=23.3.3=pypi_0
-fmt=9.1.0=hffc8910_0
-fonttools=4.53.0=py310ha6dd24b_0
+datasets=2.20.0=pyhd8ed1ab_0
+debugpy=1.8.1=py39hf3050f2_0
+decorator=5.1.1=pyhd8ed1ab_0
+dill=0.3.8=pyhd8ed1ab_0
+dm-tree=0.1.8=py39heca4154_4
+exceptiongroup=1.2.0=pyhd8ed1ab_2
+executing=2.0.1=pyhd8ed1ab_0
+filelock=3.15.3=pyhd8ed1ab_0
+flatbuffers=24.3.25=hebf3989_0
+fonttools=4.53.0=py39hfea33bf_0
 freetype=2.12.1=hadb7bae_2
-frozendict=2.3.9=pypi_0
-frozenlist=1.4.0=pypi_0
-fsspec=2024.6.0=pyhff2d567_0
-future=0.18.3=pyhd8ed1ab_0
-gast=0.4.0=pypi_0
+frozenlist=1.4.1=py39h17cfd9d_0
+fsspec=2024.5.0=pyhff2d567_0
+gast=0.5.4=pyhd8ed1ab_0
+gdown=5.2.0=pyhd8ed1ab_0
+gensim=4.3.2=py39h47e51b9_1
+gflags=2.2.2=hc88da5d_1004
 giflib=5.2.2=h93a5062_0
+glog=0.7.1=heb240a5_0
 gmp=6.3.0=hebf3989_1
-gmpy2=2.1.5=py310h3bc658a_1
-google-auth=2.17.3=pypi_0
-google-auth-oauthlib=1.0.0=pypi_0
+gmpy2=2.1.5=py39h9bb7c0c_1
 google-pasta=0.2.0=pyh8c360ce_0
-grpc-cpp=1.43.2=ha558326_3
-grpcio=1.54.0=pypi_0
-h5py=3.6.0=nompi_py310hb8bbf05_100
-hdf5=1.12.1=nompi_hf9525e8_104
-html5lib=1.1=pypi_0
-huggingface_hub=0.23.3=pyhd8ed1ab_0
-icu=70.1=h6b3803e_0
+grpcio=1.64.1=pypi_0
+h5py=3.11.0=nompi_py39h534c8c8_102
+hdf5=1.14.3=nompi_hec07895_105
+huggingface_hub=0.23.4=pyhd8ed1ab_0
+icu=73.2=hc8870d7_0
 idna=3.7=pyhd8ed1ab_0
-imageio=2.33.1=pypi_0
 importlib-metadata=7.1.0=pyha770c72_0
+importlib-resources=6.4.0=pyhd8ed1ab_0
 importlib_metadata=7.1.0=hd8ed1ab_0
-ipykernel=6.22.0=pypi_0
-ipython=8.12.0=pypi_0
-jax=0.4.8=pypi_0
-jedi=0.18.2=pypi_0
+importlib_resources=6.4.0=pyhd8ed1ab_0
+ipykernel=6.29.4=pyh57ce528_0
+ipython=8.18.1=pyh707e725_3
+jedi=0.19.1=pyhd8ed1ab_0
 jinja2=3.1.4=pyhd8ed1ab_0
 joblib=1.4.2=pyhd8ed1ab_0
-jpeg=9e=he4db4b2_2
-jsonpatch=1.33=pyhd8ed1ab_0
-jsonpointer=3.0.0=py310hbe9552e_0
-jupyter-client=8.2.0=pypi_0
-jupyter-core=5.3.0=pypi_0
-keras=2.8.0=pyhd8ed1ab_0
-keras-preprocessing=1.1.2=pyhd8ed1ab_0
-kiwisolver=1.4.5=py310h38f39d4_1
-krb5=1.20.1=h127bd45_0
-langcodes=3.3.0=pyhd8ed1ab_0
-lazy-loader=0.3=pypi_0
-lcms2=2.15=h481adae_0
+jupyter_client=8.6.2=pyhd8ed1ab_0
+jupyter_core=5.7.2=py39h2804cbe_0
+keras=3.3.3=pypi_0
+keras-core=0.1.7=pyhd8ed1ab_0
+keras-tuner=1.4.7=pyhd8ed1ab_0
+kiwisolver=1.4.5=py39hbd775c9_1
+krb5=1.21.2=h92f50d5_0
+kt-legacy=1.0.5=pyhd8ed1ab_0
+lcms2=2.16=ha0e7c42_0
 lerc=4.0.0=h9a09cb3_0
-libarchive=3.5.2=h69ec738_3
+libabseil=20240116.2=cxx17_hebf3989_0
+libaec=1.1.3=hebf3989_0
+libarrow=16.1.0=h431211a_9_cpu
+libarrow-acero=16.1.0=h00cdb27_9_cpu
+libarrow-dataset=16.1.0=h00cdb27_9_cpu
+libarrow-substrait=16.1.0=hc68f6b8_9_cpu
 libblas=3.9.0=22_osxarm64_openblas
 libbrotlicommon=1.1.0=hb547adb_1
 libbrotlidec=1.1.0=hb547adb_1
 libbrotlienc=1.1.0=hb547adb_1
 libcblas=3.9.0=22_osxarm64_openblas
-libclang=16.0.0=pypi_0
-libcurl=7.87.0=hbe9bab4_0
+libclang=18.1.1=pypi_0
+libcrc32c=1.1.2=hbdafb3b_0
+libcurl=8.8.0=h7b6f9a7_0
 libcxx=17.0.6=h5f092b4_0
-libdeflate=1.17=h1a8c8d9_0
+libdeflate=1.20=h93a5062_0
 libedit=3.1.20191231=hc8eb9b7_2
 libev=4.33=h93a5062_2
+libevent=2.1.12=h2757513_1
 libffi=3.4.2=h3422bc3_5
 libgfortran=5.0.0=13_2_0_hd922786_3
 libgfortran5=13.2.0=hf226fd6_3
-libiconv=1.17=h0d3ecfb_2
-libjpeg-turbo=2.1.4=h1a8c8d9_0
+libgoogle-cloud=2.25.0=hfe08963_0
+libgoogle-cloud-storage=2.25.0=h3fa5b87_0
+libgrpc=1.62.2=h9c18a4f_0
+libjpeg-turbo=3.0.0=hb547adb_1
 liblapack=3.9.0=22_osxarm64_openblas
-libmamba=0.24.0=h1c735bf_1
-libmambapy=0.24.0=py310h19f903a_1
-libnghttp2=1.51.0=hd184df1_0
+libnghttp2=1.58.0=ha4dd798_1
 libopenblas=0.3.27=openmp_h6c19121_0
+libparquet=16.1.0=hcf52c46_9_cpu
 libpng=1.6.43=h091b4b1_0
-libprotobuf=3.19.6=hb5ab8b9_0
-libsolv=0.7.29=h1efcc80_0
+libprotobuf=4.25.3=hbfab5d5_0
+libre2-11=2023.09.01=h7b2c953_2
+libsentencepiece=0.2.0=hdceaaab_2
+libsodium=1.0.18=h27ca646_1
 libsqlite=3.46.0=hfb93653_0
-libssh2=1.10.0=hb80f160_3
-libtiff=4.5.0=h5dffbdd_2
+libssh2=1.11.0=h7a5bd25_0
+libthrift=0.19.0=h026a170_1
+libtiff=4.6.0=h07db509_3
+libtorch=2.3.1=cpu_generic_hfd7a412_0
+libutf8proc=2.8.0=h1a8c8d9_0
+libuv=1.48.0=h93a5062_0
 libwebp-base=1.4.0=h93a5062_0
-libxcb=1.13=h9b22ae9_1004
-libxml2=2.10.3=h67585b2_4
-libzlib=1.2.13=hfb2fe0b_6
+libxcb=1.16=hf2054a2_0
+libzlib=1.3.1=hfb2fe0b_1
 llvm-openmp=18.1.7=hde57baf_0
-lxml=4.9.3=pypi_0
 lz4-c=1.9.4=hb7217d7_0
-lzo=2.10=h93a5062_1001
-mamba=0.24.0=py310h25b57eb_1
-markdown=3.4.3=pypi_0
-markupsafe=2.1.5=py310hd125d64_0
-matplotlib=3.7.1=py310hb6292c7_0
-matplotlib-base=3.7.1=py310h78c5c2f_0
-matplotlib-inline=0.1.6=pypi_0
-mistune=0.8.4=pypi_0
-ml-dtypes=0.1.0=pypi_0
+markdown=3.6=pyhd8ed1ab_0
+markdown-it-py=3.0.0=pyhd8ed1ab_0
+markupsafe=2.1.5=py39h17cfd9d_0
+matplotlib=3.8.4=py39hdf13c20_2
+matplotlib-base=3.8.4=py39h15359f4_2
+matplotlib-inline=0.1.7=pyhd8ed1ab_0
+mdurl=0.1.2=pyhd8ed1ab_0
+ml_dtypes=0.3.2=py39h47e51b9_0
 mpc=1.3.1=h91ba8db_0
 mpfr=4.2.1=h41d338b_1
 mpmath=1.3.0=pyhd8ed1ab_0
-multidict=6.0.4=pypi_0
-multitasking=0.0.11=pypi_0
+multidict=6.0.5=py39h02fc5c5_0
+multiprocess=0.70.16=py39h17cfd9d_0
 munkres=1.1.4=pyh9f0ad1d_0
-murmurhash=1.0.10=py310h1253130_1
-nbconvert=5.6.1=pypi_0
+namex=0.0.8=pyhd8ed1ab_0
 ncurses=6.5=hb89a1cb_0
-nest-asyncio=1.5.6=pypi_0
-networkx=3.2.1=pypi_0
-ninja=1.12.1=h420ef59_0
-nlpaug=1.1.4=pyhd8ed1ab_0
+nest-asyncio=1.6.0=pyhd8ed1ab_0
+networkx=3.2.1=pyhd8ed1ab_0
+nlpaug=1.1.11=pypi_0
 nltk=3.8.1=pyhd8ed1ab_0
-numpy=1.23.2=py310h127c7cf_0
-oauthlib=3.2.2=pyhd8ed1ab_0
-openai=0.28.1=pypi_0
-opencv-python=4.8.1.78=pypi_0
-openjpeg=2.5.0=hbc2ba62_2
-openssl=1.1.1w=h53f4e23_0
+nomkl=1.0=h5ca1d4c_0
+numpy=1.26.4=py39h7aa2656_0
+openjpeg=2.5.2=h9f1df11_0
+openssl=3.3.1=hfb2fe0b_0
 opt_einsum=3.3.0=pyhc1e730c_2
+optree=0.11.0=pypi_0
+orc=2.0.1=h47ade37_1
 packaging=24.1=pyhd8ed1ab_0
-pandas=2.1.3=pypi_0
-parso=0.8.3=pypi_0
-pathy=0.10.2=pyhd8ed1ab_0
-patsy=0.5.6=pyhd8ed1ab_0
-peewee=3.17.0=pypi_0
-pexpect=4.8.0=pypi_0
-pickleshare=0.7.5=pypi_0
-pillow=9.4.0=py310h5a7539a_1
-pip=23.0.1=pyhd8ed1ab_0
-platformdirs=3.5.0=pypi_0
-pluggy=1.5.0=pyhd8ed1ab_0
-preshed=3.0.9=py310h1253130_1
-prompt-toolkit=3.0.38=pypi_0
-protobuf=4.22.3=pypi_0
-psutil=5.9.5=pypi_0
+pandas=2.2.2=py39h998126f_1
+parso=0.8.4=pyhd8ed1ab_0
+pexpect=4.9.0=pyhd8ed1ab_0
+pickleshare=0.7.5=py_1003
+pillow=10.3.0=py39h3baf582_1
+pip=24.0=pyhd8ed1ab_0
+platformdirs=4.2.2=pyhd8ed1ab_0
+pooch=1.8.2=pyhd8ed1ab_0
+prompt-toolkit=3.0.47=pyha770c72_0
+protobuf=4.25.3=py39heca4154_0
+psutil=5.9.8=py39h17cfd9d_0
 pthread-stubs=0.4=h27ca646_1001
-ptyprocess=0.7.0=pypi_0
-pure-eval=0.2.2=pypi_0
-pyasn1=0.5.0=pypi_0
-pyasn1-modules=0.3.0=pypi_0
-pyautogen=0.1.14=pypi_0
-pybind11-abi=4=hd8ed1ab_3
-pycosat=0.6.6=py310h2aa6e3c_0
-pycparser=2.22=pyhd8ed1ab_0
-pydantic=1.10.14=py310hd125d64_0
-pygments=2.15.1=pyhd8ed1ab_0
-pyjwt=2.8.0=pyhd8ed1ab_1
-pyopenssl=23.2.0=pyhd8ed1ab_1
+ptyprocess=0.7.0=pyhd3deb0d_0
+pure_eval=0.2.2=pyhd8ed1ab_0
+pyarrow=16.1.0=py39h2beb185_3
+pyarrow-core=16.1.0=py39h883cd64_3_cpu
+pyarrow-hotfix=0.6=pyhd8ed1ab_0
+pygments=2.18.0=pyhd8ed1ab_0
 pyparsing=3.1.2=pyhd8ed1ab_0
 pysocks=1.7.1=pyha2e5f31_6
-python=3.10.8=hf452327_0_cpython
+python=3.9.19=hd7ebdb9_0_cpython
 python-dateutil=2.9.0=pyhd8ed1ab_0
-python-dotenv=1.0.0=pypi_0
 python-flatbuffers=24.3.25=pyh59ac667_0
 python-tzdata=2024.1=pyhd8ed1ab_0
-python_abi=3.10=4_cp310
-pytorch=1.11.0=cpu_py310he9514b4_0
-pytz=2023.3.post1=pypi_0
-pyu2f=0.1.5=pyhd8ed1ab_0
-pyyaml=6.0.1=py310h2aa6e3c_1
-pyzmq=25.0.2=pypi_0
-re2=2022.02.01=hbdafb3b_0
+python-xxhash=3.4.1=py39h0f82c59_0
+python_abi=3.9=4_cp39
+pytorch=2.3.1=cpu_generic_py39hec34c52_0
+pytz=2024.1=pyhd8ed1ab_0
+pyyaml=6.0.1=py39h0f82c59_1
+pyzmq=26.0.3=py39he7f0319_0
+re2=2023.09.01=h4cba328_2
 readline=8.2=h92ec313_1
-regex=2024.5.15=py310ha6dd24b_0
-reproc=14.2.4.post0=h93a5062_1
-reproc-cpp=14.2.4.post0=h965bd2d_1
-requests=2.31.0=pypi_0
-requests-oauthlib=1.3.1=pypi_0
-rich=12.6.0=pyhd8ed1ab_0
-rsa=4.9=pyhd8ed1ab_0
-ruamel.yaml=0.17.40=py310hd125d64_0
-ruamel.yaml.clib=0.2.8=py310hd125d64_0
+regex=2024.5.15=py39hfea33bf_0
+requests=2.32.3=pyhd8ed1ab_0
+responses=0.25.3=pyhd8ed1ab_0
+rich=13.7.1=pyhd8ed1ab_0
 sacremoses=0.0.53=pyhd8ed1ab_0
-safetensors=0.4.3=pypi_0
-scikit-image=0.22.0=pypi_0
-scipy=1.10.1=pypi_0
-seaborn=0.13.2=hd8ed1ab_2
-seaborn-base=0.13.2=pyhd8ed1ab_2
-setuptools=65.6.3=pyhd8ed1ab_0
-shellingham=1.5.4=pyhd8ed1ab_0
+safetensors=0.4.3=py39h8fec3ad_0
+scikit-learn=1.5.0=py39h3c33c8b_1
+scipy=1.12.0=py39hcc04109_2
+sentencepiece=0.2.0=hdf13c20_2
+sentencepiece-python=0.2.0=py39h45d5700_2
+sentencepiece-spm=0.2.0=hdceaaab_2
+setuptools=70.0.0=pyhd8ed1ab_0
 six=1.16.0=pyh6c4a22f_0
 sleef=3.5.1=h156473d_2
-smart_open=5.2.1=pyhd8ed1ab_0
-snappy=1.1.10=hd04f947_1
-spacy=3.5.3=py310h11c608e_0
-spacy-legacy=3.0.12=pyhd8ed1ab_0
-spacy-loggers=1.0.5=pyhd8ed1ab_0
-sqlite=3.46.0=h5838104_0
-srsly=2.4.8=py310h1253130_1
-stack-data=0.6.2=pypi_0
-statsmodels=0.14.2=py310hb3e58dc_0
-sympy=1.12=pypyh9d50eac_103
-tensorboard=2.12.2=pypi_0
-tensorboard-data-server=0.7.0=pypi_0
-tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
-tensorflow=2.8.0=cpu_py310h6ecea76_0
-tensorflow-base=2.8.0=cpu_py310h7f11b9b_0
-tensorflow-deps=2.10.0=0
-tensorflow-estimator=2.12.0=pypi_0
-tensorflow-macos=2.12.0=pypi_0
-tensorflow-metal=0.8.0=pypi_0
-termcolor=2.3.0=pypi_0
-testpath=0.6.0=pypi_0
-thinc=8.1.12=py310h11c608e_0
-tifffile=2023.12.9=pypi_0
+smart_open=7.0.4=pyhd8ed1ab_0
+snappy=1.2.0=hd04f947_1
+soupsieve=2.5=pyhd8ed1ab_1
+stack_data=0.6.2=pyhd8ed1ab_0
+sympy=1.12.1=pypyh2585a3b_103
+tensorboard=2.16.2=pyhd8ed1ab_0
+tensorboard-data-server=0.7.2=pypi_0
+tensorflow=2.16.1=cpu_py39h009d07a_0
+tensorflow-base=2.16.1=cpu_py39h6d6c348_0
+tensorflow-estimator=2.16.1=cpu_py39h9ff499c_0
+tensorflow-io-gcs-filesystem=0.37.0=pypi_0
+tensorflow-macos=2.16.1=pypi_0
+termcolor=2.4.0=pyhd8ed1ab_0
+threadpoolctl=3.5.0=pyhc1e730c_0
 tk=8.6.13=h5083fa2_1
-tokenizers=0.19.1=py310hb145503_0
-toolz=0.12.1=pyhd8ed1ab_0
-torchvision=0.14.1=cpu_py310h7df52bc_0
-tornado=6.3.1=pypi_0
+tokenizers=0.13.3=pypi_0
+tornado=6.4.1=py39hfea33bf_0
 tqdm=4.66.4=pyhd8ed1ab_0
-traitlets=5.9.0=pypi_0
-transformers=4.41.2=pypi_0
-typer=0.4.2=pyhd8ed1ab_0
-typing-extensions=4.5.0=pypi_0
+traitlets=5.14.3=pyhd8ed1ab_0
+transformers=4.30.2=pypi_0
+types-pyyaml=6.0.12.20240311=pyhd8ed1ab_0
+typing-extensions=4.12.2=hd8ed1ab_0
 typing_extensions=4.12.2=pyha770c72_0
-tzdata=2023.3=pypi_0
-unicodedata2=15.1.0=py310h2aa6e3c_0
-urllib3=2.2.1=pyhd8ed1ab_0
-wasabi=1.1.2=py310hbe9552e_1
-wcwidth=0.2.6=pypi_0
-werkzeug=2.3.1=pypi_0
+tzdata=2024a=h0c530f3_0
+unicodedata2=15.1.0=py39h0f82c59_0
+urllib3=1.26.19=pypi_0
+wcwidth=0.2.13=pyhd8ed1ab_0
+werkzeug=3.0.3=pyhd8ed1ab_0
 wheel=0.43.0=pyhd8ed1ab_1
-wrapt=1.14.1=pypi_0
-xmltodict=0.13.0=pypi_0
+wrapt=1.16.0=py39h17cfd9d_0
+xmltodict=0.13.0=pyhd8ed1ab_0
 xorg-libxau=1.0.11=hb547adb_0
 xorg-libxdmcp=1.1.3=h27ca646_0
+xxhash=0.8.2=hb547adb_0
 xz=5.2.6=h57fd34a_0
 yaml=0.2.5=h3422bc3_2
-yaml-cpp=0.7.0=h13dd4ca_3
-yarl=1.9.3=pypi_0
-yfinance=0.2.32=pypi_0
+yarl=1.9.4=py39h17cfd9d_0
+zeromq=4.3.5=hcc0f68c_4
 zipp=3.19.2=pyhd8ed1ab_0
-zlib=1.2.13=hfb2fe0b_6
-zstandard=0.22.0=py310h6289e41_0
-zstd=1.5.5=h4f39d0f_0
+zstd=1.5.6=hb46c0d2_0
